[package]
name = "nuprompt"
version = "0.4.6"
rust-version = "1.83.0"
description = "A personal bash prompt."
repository = "https://github.com/astromechza/nuprompt"
edition = "2021"
license-file = "LICENSE"
categories = ["command-line-interface"]
keywords = ["prompt"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
]

[dependencies]
git2 = { version = "0.19.0", default-features = false, features = ["vendored-libgit2"] }
users = { version = "0.11.0", default-features = false }
log = { version = "0.4.22", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
anyhow = { version = "1.0.94", default-features = false }
coarsetime = { version = "0.1.35", default-features = false }
termcolor = { version = "1.4.1", default-features = false }
